aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jge__tests__jge_lit_var.snap
---
source: aya-assembly/src/parser/instructions/jge.rs
expression: result
---
Instruction(
    JgeLit(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 7,
                    end: 11,
                },
            ),
        ),
        Var(
            ByteOffset {
                start: 15,
                end: 18,
            },
        ),
    ),
)
