aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jge__tests__jge_reg.snap
---
source: aya-assembly/src/parser/instructions/jge.rs
expression: result
---
Instruction(
    JgeReg(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        Register(
            ByteOffset {
                start: 14,
                end: 16,
            },
        ),
    ),
)
